--- a/Homework2.html
+++ b/Homework2.html
@@ -1,20 +1,13 @@
 <!doctype html>
 
-<html lang="en">
 <head>
-  <meta charset="utf-8">
-
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-
+  <title>Shopping Cart</title>
   <link rel="stylesheet" href="Homework2.css">
-
 </head>
 
 <body>
-  <script src="js/scripts.js"></script>
-
-  <h1 id="hello">Hello, world!</h1>
+  <div>
+    <h1 id="hello">Hello, world!</h1>
+  </div>
 </body>
 </html>
