--- a/Homework2.html
+++ b/Homework2.html
@@ -6,8 +6,20 @@
 </head>
 
 <body>
-  <div>
-    <h1 id="hello">Hello, world!</h1>
+  <div id="box">
+    <h1>My Shopping Cart</h1>
+    <div>
+      <h2>Billing Address</h2>
+    </div>
+    <div>
+      <h2>Shipping Address</h2>
+    </div>
+    <div>
+      <h2>Payment</h2>
+    </div>
+    <div>
+      <h2>Cart</h2>
+    </div>
   </div>
 </body>
 </html>
