--- a/Homework2.html
+++ b/Homework2.html
@@ -18,7 +18,7 @@
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" placeholder="JohnDoe"><br><br>
       <label for="email">Email:</label>
-      <input type="text" id="email" name="email" placeholder="john.doe@email.com"><br><br>
+      <input type="email" id="email" name="email" placeholder="john.doe@email.com"><br><br>
       <label for="address">Address:</label>
       <input type="text" id="address" name="address" placeholder="123 Main St"><br><br>
       <label for="address2">Address 2 (Optional):</label>
@@ -333,7 +333,7 @@
       <input type="checkbox" id="addressCheck" name="addressCheck" onclick="displayShippingAddress()">
       <label for="addressCheck"> Shipping adress is the same as billing address</label><br>
       <input type="checkbox" id="saveForLater" name="saveForLater">
-      <label for="saveForLater"> Save this information for next time</label><br>
+      <label for="saveForLater"> Save this information for next time</label>
     </div>
     <div id="shippingAddressBox">
       <h2>Shipping Address</h2>
@@ -653,10 +653,24 @@
       <option value="WY">Wyoming</option>
       </select><br><br>
       <label for="zipcode">Zip Code:</label>
-      <input type="text" id="zipcode" name="zipcode" placeholder="12345"><br><br>
+      <input type="text" id="zipcode" name="zipcode" placeholder="12345">
     </div>
     <div>
       <h2>Payment</h2>
+      <input type="radio" id="debit" name="payment" value="debit">
+      <label for="debit">Debit</label><br>
+      <input type="radio" id="credit" name="payment" value="credit">
+      <label for="female">Credit</label><br>
+      <input type="radio" id="paypal" name="payment" value="paypal">
+      <label for="paypal">Paypal</label><br><br>
+      <label for="cardname">Name on card:</label>
+      <input type="text" id="cardname" name="cardname"><br><br>
+      <label for="cardnumber">Card number:</label>
+      <input type="text" id="cardnumber" name="cardnumber"><br><br>
+      <label for="expirationdate">Expiration date:</label>
+      <input type="text" id="expirationdate" name="expirationdate"><br><br>
+      <label for="cvv">CVV:</label>
+      <input type="text" id="cvv" name="cvv">
     </div>
     <div>
       <h2>Cart</h2>
