added bootstrap components (lol at me saying added in all these commits)

--- a/Homework2.html
+++ b/Homework2.html
@@ -3,10 +3,16 @@
 <head>
   <title>Shopping Cart</title>
   <link rel="stylesheet" href="Homework2.css">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 
 <body>
   <script src="Homework2.js"></script>
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <form id="box">
     <div id="box">
       <h1>Checkout</h1>
