added a box to the right of checkout form for cart section

--- a/Homework2.html
+++ b/Homework2.html
@@ -10,8 +10,8 @@
 
 <body>
   <script src="Homework2.js"></script>
-  <form id="box">
-    <div id="box">
+  <form>
+    <div id="checkout-form">
       <h1>Checkout</h1>
       <div>
         <h2>Billing Address</h2>
@@ -769,9 +769,9 @@
           </div>
         </div>
       </div>
-      <div>
-        <h2>Cart</h2>
-      </div>
+    </div>
+    <div id="shopping-cart">
+      <h2>My Cart</h2>
     </div>
   </form>
 </body>
