added cart section

--- a/Homework2.html
+++ b/Homework2.html
@@ -775,6 +775,58 @@
     </div>
     <div id="shopping-cart">
       <h2>My Cart</h2>
+      <div id="cart-items">
+        <div id="item">
+          <div>
+            <h5 id="first-product">Product name</h5>
+            <p>Brief description</p>
+          </div>
+          <div>
+            <h5 id="first-price">$12</h5>
+          </div>
+        </div>
+        <div id="item">
+          <div>
+            <h5>Product name</h5>
+            <p>Brief description</p>
+          </div>
+          <div>
+            <h5>$8</h5>
+          </div>
+        </div>
+        <div id="item">
+          <div>
+            <h5>Product name</h5>
+            <p>Brief description</p>
+          </div>
+          <div>
+            <h5>$5</h5>
+          </div>
+        </div>
+        <div id="coupon">
+          <div>
+            <h5>Promo code</h5>
+            <p>SAMPLECODE</p>
+          </div>
+          <div>
+            <h5>-$5</h5>
+          </div>
+        </div>
+        <div id="total">
+          <div>
+            <h5>Total (USD)</h5>
+          </div>
+          <div>
+            <h5>$20</h5>
+          </div>
+        </div>
+        <div class="input-group" id="promo">
+          <input type="text" class="form-control" placeholder="PROMO CODE" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button">Redeem</button>
+          </div>
+        </div>
+      </div>
     </div>
   </form>
 </body>
