--- a/Homework2.html
+++ b/Homework2.html
@@ -38,8 +38,8 @@
         </div>
 
         <div class="form-group" id="outer-box">
-            <label for="address2">Address 2</label> 
-            <label id="optional" class="form-text text-muted">(Optional)</label>
+          <label for="address2">Address 2</label> 
+          <label for="address2" id="optional" class="text-muted">(Optional)</label>
           <input type="text" class="form-control" id="address2" placeholder="Apt or Suite">
         </div>
         
@@ -400,7 +400,7 @@
 
         <div class="form-group" id="outer-box">
           <label for="address2">Address 2</label> 
-          <label id="optional" class="form-text text-muted">(Optional)</label>
+          <label id="optional" class="text-muted">(Optional)</label>
           <input type="text" class="form-control" id="address2" placeholder="Apt or Suite">
         </div>
         
